added image saving functionality