@@ -3,13 +3,11 @@ package com.example.benomad.service.impl;
 import com.example.benomad.dto.PlaceDTO;
 import com.example.benomad.entity.Place;
 import com.example.benomad.entity.Rating;
-import com.example.benomad.entity.User;
-import com.example.benomad.enums.PlaceCategory;
-import com.example.benomad.enums.PlaceType;
-import com.example.benomad.enums.Region;
+import com.example.benomad.enums.*;
+import com.example.benomad.exception.ContentIsNotRatedException;
+import com.example.benomad.exception.ContentNotFoundException;
+import com.example.benomad.exception.FailedWhileUploadingException;
 import com.example.benomad.exception.InvalidRatingException;
-import com.example.benomad.exception.PlaceNotFoundException;
-import com.example.benomad.exception.UserNotFoundException;
 import com.example.benomad.mapper.PlaceMapper;
 import com.example.benomad.repository.PlaceRepository;
 import com.example.benomad.repository.RatingRepository;
@@ -23,7 +21,12 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,78 +36,140 @@ public class PlaceServiceImpl implements PlaceService {
     private final RatingRepository ratingRepository;
     private final UserRepository userRepository;
     private final PlaceMapper placeMapper;
+    private final ImageServiceImpl imageService;
 
     @Override
-    public List<PlaceDTO> getPlacesByAttributes(String name, Region region, PlaceType placeType, PlaceCategory placeCategory,
-                                                   String address, Boolean match, Long currentUserId,PageRequest pageRequest) {
-        Place builtPlace = Place.builder().name(name).address(address).region(region).placeType(placeType).placeCategory(placeCategory).build();
+    public List<PlaceDTO> getPlacesByAttributes(String name, Region region, PlaceType placeType,
+                                                   String address,Boolean match,PageRequest pageRequest) {
+        Place builtPlace = Place.builder().name(name).address(address).region(region).placeType(placeType).build();
         Example<Place> exampleOfPlace = Example.of(builtPlace,getExampleMatcher(match));
         Page<Place> pages = placeRepository.findAll(exampleOfPlace,pageRequest);
-        return placeMapper.entityListToDtoList(pages.stream().toList(),currentUserId);
+        return placeMapper.entityListToDtoList(pages.stream().collect(Collectors.toList()));
     }
 
 
     @Override
-    public PlaceDTO getPlaceById(Long id,Long currentUserId) throws PlaceNotFoundException {
-        return placeMapper.entityToDto(placeRepository.findById(id).orElseThrow(PlaceNotFoundException::new),currentUserId);
+    public PlaceDTO getPlaceById(Long placeId) throws ContentNotFoundException {
+        return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(
+                () -> {
+                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                })
+        );
     }
 
     @Override
-    public PlaceDTO insertPlace(PlaceDTO placeDTO, MultipartFile file) {
+    public PlaceDTO insertPlace(PlaceDTO placeDTO) {
         placeDTO.setId(null);
-        placeRepository.save(placeMapper.dtoToEntity(placeDTO,file));
+        placeDTO.setImageUrl(null);
+        placeRepository.save(placeMapper.dtoToEntity(placeDTO));
+        placeDTO.setId(placeRepository.getLastValueOfSequence());
         return placeDTO;
     }
 
     @Override
-    public PlaceDTO deletePlaceById(Long id) throws PlaceNotFoundException {
-        Place place = placeRepository.findById(id).orElseThrow(PlaceNotFoundException::new);
+    public PlaceDTO deletePlaceById(Long placeId) throws ContentNotFoundException {
+        Place place = placeRepository.findById(placeId).orElseThrow(
+                () -> {
+                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                }
+        );
         placeRepository.delete(place);
-        return placeMapper.entityToDto(place,null);
+        return placeMapper.entityToDto(place);
     }
 
     @Override
-    public PlaceDTO updatePlaceById(Long id, PlaceDTO placeDTO,MultipartFile file) throws PlaceNotFoundException {
-        placeRepository.findById(id).orElseThrow(PlaceNotFoundException::new);
-        placeRepository.save(placeMapper.dtoToEntity(placeDTO, file));
+    public PlaceDTO updatePlaceById(Long placeId, PlaceDTO placeDTO) throws ContentNotFoundException {
+        if(!placeRepository.existsById(placeId)){
+            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+        }
+        placeRepository.save(placeMapper.dtoToEntity(placeDTO));
         return placeDTO;
     }
 
     @Override
-    public void ratePlaceById(Long placeId, Long userId, Integer rating, boolean isRemoval)
-            throws PlaceNotFoundException, InvalidRatingException {
+    public PlaceDTO ratePlaceById(Long placeId, Long userId, Integer rating, boolean isRemoval)
+            throws ContentNotFoundException, InvalidRatingException {
         if(isRemoval){
-            removeRating(placeId, userId);
-            return;
+            rating = 1;
+            Rating neededRating = ratingRepository.findByPlaceAndUser(
+                    placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }),
+                    userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            })
+            ).orElseThrow(
+                    () -> {
+                        throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                    });
+            ratingRepository.delete(neededRating);
         }
         if(rating < 1 || rating > 5){
             throw new InvalidRatingException();
         }
         try{
-            //Checking if user have already rated the place or not
-            //if yes then we will just update the rating instead of adding a new one
-            Rating neededRating = ratingRepository.findByPlaceAndUser(placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new),
-                    userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new)).orElseThrow(PlaceNotFoundException::new);
+            Rating neededRating = ratingRepository.findByPlaceAndUser(
+                    placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }),
+                    userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            }
+                    )).orElseThrow(
+                            () -> {
+                                throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                            });
             neededRating.setRating(rating);
             ratingRepository.save(neededRating);
         }catch (Exception e){
-            //If program fails to find a rating in db we will create a new record
             ratingRepository.save(Rating.builder()
-                    .place(placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new))
-                    .user(userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new))
+                    .place(placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }
+                    ))
+                    .user(userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            }
+                    ))
                     .rating(rating)
                     .build());
         }
-
+        return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(() -> {
+            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+        }));
     }
 
     @Override
-    public void removeRating(Long placeId, Long userId) throws PlaceNotFoundException{
-        Rating neededRating = ratingRepository.findByPlaceAndUser(
-                placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new),
-                userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new)
-        ).orElseThrow(PlaceNotFoundException::new);
-        ratingRepository.delete(neededRating);
+    public PlaceDTO insertImageByPlaceId(Long id, MultipartFile file) {
+        Place place = placeRepository.findById(id)
+                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,id));
+        imageService.checkIsNotEmpty(file);
+        imageService.checkIsImage(file);
+        Map<String, String> metadata = imageService.getMetaData(file);
+        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
+        String uniqueFileName = String.format("%s-%s",file.getOriginalFilename(), UUID.randomUUID());
+        try {
+            imageService.saveImageAws(pathToFile,uniqueFileName, Optional.of(metadata),file.getInputStream());
+            place.setImageUrl(uniqueFileName);
+            placeRepository.save(place);
+            return placeMapper.entityToDto(place);
+        } catch (IOException e) {
+            throw new FailedWhileUploadingException();
+        }
+    }
+
+    @Override
+    public byte[] getImageByPlaceId(Long id) {
+        Place place = placeRepository.findById(id)
+                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,id));
+        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
+        return place.getImageUrl().map(x -> imageService.getAwsImageByPathAndKey(pathToFile,x)).orElse(new byte[0]);
     }
 
     public ExampleMatcher getExampleMatcher(Boolean match) {
@@ -113,22 +178,13 @@ public class PlaceServiceImpl implements PlaceService {
                 .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("placeCategory",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withIgnorePaths("id","description","imageUrl","linkUrl");
         ExampleMatcher notMatches = ExampleMatcher.matchingAny()
                 .withMatcher("name", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("placeCategory",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withIgnorePaths("id","description","imageUrl","linkUrl");
         return match ? matches : notMatches;
-    }
-
-    public void addPlaceToFavorites(Long placeId, Long userId) {
-        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        Place place = placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new);
-        user.getPlaces().add(place);
-        userRepository.save(user);
     }
 }
